--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -17,7 +17,7 @@
         },
         "dataSources": {
             "mainService": {
-                "uri": "/service/general/",
+                "uri": "/docapprsrv/service/general/",
                 "type": "OData",
                 "settings": {
                     "annotations": [
