--- a/ui5.yaml
+++ b/ui5.yaml
@@ -2,30 +2,30 @@
 
 specVersion: "3.1"
 metadata:
-  name: ncsdemo
+    name: ncsdemo
 type: application
 server:
-  customMiddleware:
-    - name: fiori-tools-proxy
-      afterMiddleware: compression
-      configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
-        ui5:
-          path:
-            - /resources
-            - /test-resources
-          url: https://ui5.sap.com
-        backend:
-          - path: /service
-            url: https://ncs-pte-ltd-demo-nrdspy5x-dev-nodejs-general-srv.cfapps.us10-001.hana.ondemand.com
-    - name: fiori-tools-appreload
-      afterMiddleware: compression
-      configuration:
-        port: 35729
-        path: webapp
-        delay: 300
-    - name: fiori-tools-preview
-      afterMiddleware: fiori-tools-appreload
-      configuration:
-        component: ncsdemo
-        ui5Theme: sap_horizon
+    customMiddleware:
+        -   name: fiori-tools-proxy
+            afterMiddleware: compression
+            configuration:
+                ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+                ui5:
+                    path:
+                        - /resources
+                        - /test-resources
+                    url: https://ui5.sap.com
+                backend:
+                    -   path: /docapprsrv
+                        url: https://ncs-pte-ltd-demo-nrdspy5x-dev-nodejs-general-srv.cfapps.us10-001.hana.ondemand.com/
+        -   name: fiori-tools-appreload
+            afterMiddleware: compression
+            configuration:
+                port: 35729
+                path: webapp
+                delay: 300
+        -   name: fiori-tools-preview
+            afterMiddleware: fiori-tools-appreload
+            configuration:
+                component: ncsdemo
+                ui5Theme: sap_horizon
