--- a/xs-app.json
+++ b/xs-app.json
@@ -3,6 +3,12 @@
     "authenticationMethod": "route",
     "routes": [
         {
+            "source": "^/bpmworkflowruntime/(.*)$",
+            "target": "/$1",
+            "destination": "spadestination",
+            "authenticationType": "xsuaa"
+        },
+        {
             "source": "^/resources/(.*)$",
             "target": "/resources/$1",
             "authenticationType": "none",
